# mesa

./: .clang-format  .clangd  CMakeLists.txt  Makefile  main.cpp
assets/: Character.glb  Character.m3d
assets/weapons/: Rifle.glb  SMG.glb  Shotgun.glb  Sniper.glb
src/: animation.cpp  animation.hpp  camera.cpp  camera.hpp  config.hpp  graphics.cpp  graphics.hpp  input.cpp  input.hpp  main.cpp  physics.cpp  physics.hpp  planet.cpp  planet.hpp  player.cpp  player.hpp  transform.cpp  transform.hpp
